# api/openapi/readers.yml
@@ -152,8 +152,8 @@ components:
       in: query
       schema:
         type: integer
-        default: 10
-        maximum: 100
+        default: 20
+        maximum: 1000
         minimum: 1
       required: false
     Offset:
