# bootstrap/api/requests.go
@@ -8,7 +8,7 @@ import (
 	"github.com/absmach/magistrala/internal/apiutil"
 )
 
-const maxLimitSize = 100
+const maxLimitSize = 1000
 
 type addReq struct {
 	token       string
