# certs/api/requests.go
@@ -9,7 +9,7 @@ import (
 	"github.com/absmach/magistrala/internal/apiutil"
 )
 
-const maxLimitSize = 100
+const maxLimitSize = 1000
 
 type addCertsReq struct {
 	token   string
